...
        android:layout_marginStart="24dp"
        android:lines="1"
        android:ellipsize="end"
        tools:text="Réunion A -"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintStart_toEndOf="@id/item_meeting_color"
        app:layout_constraintEnd_toStartOf="@id/item_meeting_delete_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/item_meeting_second_line"
        />

    <TextView
        android:id="@+id/item_meeting_second_line"
...
